# webos.service.bluetooth2

./: .gitignore  CMakeLists.txt  README.md
files/conf/pmlog/: webos-bluetooth-service.conf.in
files/launch/: webos-bluetooth-service.conf.in
files/rules/: 99-bluetooth.rules
files/scripts/: bluetooth_usb_inserted.sh  bluetooth_usb_removed.sh
files/sysbus/: com.webos.service.bluetooth2.api.json  com.webos.service.bluetooth2.perm.json  com.webos.service.bluetooth2.role.json.in  com.webos.service.bluetooth2.service.in
src/: bluetootha2dpprofileservice.cpp  bluetootha2dpprofileservice.h  bluetoothavrcpprofileservice.cpp  bluetoothavrcpprofileservice.h  bluetoothbinarysocket.cpp  bluetoothbinarysocket.h  bluetoothdevice.cpp  bluetoothdevice.h  bluetootherrors.cpp  bluetootherrors.h  bluetoothftpprofileservice.cpp  bluetoothftpprofileservice.h  bluetoothgattancsprofile.cpp  bluetoothgattancsprofile.h  bluetoothgattprofileservice.cpp  bluetoothgattprofileservice.h  bluetoothhfpprofileservice.cpp  bluetoothhfpprofileservice.h  bluetoothhidprofileservice.cpp  bluetoothhidprofileservice.h  bluetoothmanagerservice.cpp  bluetoothmanagerservice.h  bluetoothoppprofileservice.cpp  bluetoothoppprofileservice.h  bluetoothpairstate.cpp  bluetoothpairstate.h  bluetoothpanprofileservice.cpp  bluetoothpanprofileservice.h  bluetoothpbapprofileservice.cpp  bluetoothpbapprofileservice.h  bluetoothprofileservice.cpp  bluetoothprofileservice.h  bluetoothserviceclasses.h  bluetoothsilfactory.cpp  bluetoothsilfactory.h  bluetoothsppprofileservice.cpp  bluetoothsppprofileservice.h  channelmanager.cpp  channelmanager.h  clientwatch.cpp  (+8 more)
